refactor: Refatorando de mapper para builder